# ds-analys-doodle

./: .dockerignore  Dockerfile  README.docker.md  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/configs/css/: dark.css  default.css  pastel.css
src/pages/: analysis.py  overview.py  upload.py  visualization.py
src/pages_module/: analysis.py  chart_constants.py  chart_settings.py  overview.py  upload.py  visualization.py
src/utils/: __init__.py  analyzer.py  css_config.py  data_handler.py  debug_decorators.py  terminal.py  visualizer.py
src/utils/data_processing/: __init__.py  filtering.py  io.py  optimize.py  sample.py
src/utils/visualization/: __init__.py  computations.py  context.py  core.py  strategies.py
